--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,6 +1,17 @@
 .Wrapper {
   max-width: 260px;
 
+  &:hover {
+    .Price {
+      display: none;
+    }
+
+    .ButtonWrapper {
+      display: flex;
+      justify-content: center;
+    }
+  }
+
   .TextBlock {
     display: flex;
     flex-direction: column;
@@ -10,6 +21,19 @@
 
     .Text {
       text-align: center;
+    }
+
+    .Price {
+      text-align: center;
+    }
+
+    .ButtonWrapper {
+      display: none;
+    }
+
+    .Button {
+      all: unset;
+      color: var(--colors-blue-700);
     }
   }
 }
