--- a/src/components/FormComponents/Input/Input.module.css
+++ b/src/components/FormComponents/Input/Input.module.css
@@ -6,17 +6,15 @@
 
 .Input {
   width: 100%;
-  padding: 12px 70px 12px 16px;
-  border: none;
-  box-shadow: inset 0 0 0 1px var(--colors-gray-900);
+  padding: 12px 12px 12px 16px;
+  border: 1px solid var(--colors-gray-900);
   color: var(--colors-gray-900);
   font-size: 16px;
   font-weight: 400;
   line-height: 150.6%;
 
   &:focus {
-    border: none;
-    box-shadow: inset 0 0 0 1px var(--colors-gray-1000);
+    border: 1px solid var(--colors-gray-1000);
     outline: 0;
   }
 
