--- a/src/components/Subscribe/Subscribe.module.css
+++ b/src/components/Subscribe/Subscribe.module.css
@@ -4,25 +4,10 @@
 }
 
 .Input {
-  width: 100%;
-  padding: 12px 70px 12px 16px;
-  border: none;
-  box-shadow: inset 0 0 0 1px var(--colors-gray-900);
-  color: var(--colors-gray-900);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 150.6%;
+  border-right: transparent;
 
   &:focus {
+    border-right: transparent;
     outline: 0;
-  }
-
-  &::placeholder {
-    color: var(--gray-light-cokor);
-  }
-
-  &:focus::placeholder {
-    opacity: 0;
-    transition: opacity 0.3s ease;
   }
 }
