--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,13 +1,11 @@
 .Wrapper {
-  max-width: 260px;
-
-  /* @media (width >= 990px) {
-    max-width: 224px;
+  .Price {
+    text-align: center;
   }
 
-  @media (width >= 390px) {
-    max-width: 342px;
-  } */
+  .ButtonWrapper {
+    display: none;
+  }
 
   &:hover {
     .Price {
@@ -19,29 +17,27 @@
       justify-content: center;
     }
   }
+}
 
-  .TextBlock {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 16px 24px;
-    gap: 4px;
+.TextBlock {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 16px 24px;
+  gap: 4px;
+}
 
-    .Text {
-      text-align: center;
-    }
+.Text {
+  text-align: center;
+}
 
-    .Price {
-      text-align: center;
-    }
+.Button {
+  all: unset;
+  color: var(--colors-blue-700);
+}
 
-    .ButtonWrapper {
-      display: none;
-    }
-
-    .Button {
-      all: unset;
-      color: var(--colors-blue-700);
-    }
+.Link {
+  &:hover {
+    color: var(--colors-dark);
   }
 }
