fixed style Cards

--- a/src/pages/main/components/Items/Items.module.css
+++ b/src/pages/main/components/Items/Items.module.css
@@ -30,10 +30,9 @@
 }
 
 .Cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
   gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
 }
 
 .ShowMore {
