--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -15,11 +15,19 @@
       display: flex;
       align-items: center;
       padding: 0 24px;
+
+      @media (width >= 990px) {
+        padding: 0 40px;
+      }
     }
 
     .HeaderTop {
       justify-content: space-between;
       padding: 12px 24px;
+
+      @media (width >= 990px) {
+        padding: 12px 40px;
+      }
     }
 
     .LogoBig {
