--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -8,6 +8,10 @@
   width: 100%;
   padding: 0 24px;
 
+  @media (width >= 990px) {
+    padding: 0 40px;
+  }
+
   @media (width >= 1440px) {
     max-width: 1440px;
     padding: 0;
