--- a/src/pages/Product/components/RelatedProducts/RelatedProduct.module.css
+++ b/src/pages/Product/components/RelatedProducts/RelatedProduct.module.css
@@ -1,16 +1,11 @@
 .Wrapper {
+  max-width: 1360px;
+  margin: 0 auto;
   margin-bottom: 120px;
 }
 
-.Sort {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 24px;
-}
-
-.ButtonWrapper {
-  display: flex;
-  gap: 24px;
+.Title {
+  margin-bottom: 40px;
 }
 
 .Button {
@@ -21,10 +16,6 @@
   &:hover {
     color: var(--colors-blue-700);
   }
-}
-
-.Select {
-  display: flex;
 }
 
 .Cards {
