feat: added page Order

--- a/src/components/FormComponents/Label/Label.module.css
+++ b/src/components/FormComponents/Label/Label.module.css
@@ -1,4 +1,9 @@
-.Star {
+.RedStar {
   padding-left: 4px;
   color: var(--colors-red-700);
+}
+
+.GrayStar {
+  padding-left: 4px;
+  color: var(--colors-gray-900);
 }
