--- a/src/components/FormComponents/TextArea/TextArea.module.css
+++ b/src/components/FormComponents/TextArea/TextArea.module.css
@@ -1,18 +1,19 @@
 .Wrapper {
   display: flex;
-  width: 100%;
   flex-direction: column;
   gap: 4px;
 }
 
-.Input {
+.TextArea {
   width: 100%;
+  height: 140px;
   padding: 12px 12px 12px 16px;
   border: 1px solid var(--colors-gray-900);
   color: var(--colors-gray-900);
   font-size: 16px;
   font-weight: 400;
   line-height: 150.6%;
+  resize: none;
 
   &:focus {
     border: 1px solid var(--colors-gray-1000);
