--- a/src/pages/Product/components/RelatedProducts/RelatedProduct.module.css
+++ b/src/pages/Product/components/RelatedProducts/RelatedProduct.module.css
@@ -26,7 +26,7 @@
   display: grid;
   margin-bottom: 48px;
   gap: 15px;
-  grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(228px, 1fr));
 }
 
 .ShowMore {
