feat: added FormStore

--- a/src/components/FormComponents/TextArea/TextArea.module.css
+++ b/src/components/FormComponents/TextArea/TextArea.module.css
@@ -14,18 +14,27 @@
   font-weight: 400;
   line-height: 150.6%;
   resize: none;
+}
 
-  &:focus {
-    border: 1px solid var(--colors-gray-1000);
-    outline: 0;
-  }
+.TextArea:focus {
+  border: 1px solid var(--colors-gray-1000);
+  outline: 0;
+}
 
-  &::placeholder {
-    color: var(--gray-light-cokor);
-  }
+.TextArea::placeholder {
+  color: var(--gray-light-cokor);
+}
 
-  &:focus::placeholder {
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
+.TextArea:focus::placeholder {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.isInputError {
+  border: 1px solid var(--colors-red-700);
+}
+
+.Error {
+  color: var(--colors-red-700);
+  font-size: 14px;
 }
